services/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    app.kubernetes.io/name: n8n
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: n8n
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: n8n
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: n8n
        image: docker.io/n8nio/n8n:1.82.1
        ports:
        - name: http
          containerPort: 5678
        volumeMounts:
        - name: n8n-data
          mountPath: /home/node/.n8n
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      volumes:
      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-data
